--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,16 +6,16 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.71"
-async-executor = "1.5.1"
-cgroups-rs = "0.3.2"
-clap = { version = "4.3.3", features = ["derive"] }
-env_logger = "0.10.0"
-futures-lite = "1.13.0"
-futures-util = "0.3.28"
-log = "0.4.19"
-netlink-proto = { version = "0.11.1", default-features = false, features = ["smol_socket"] }
-nix = "0.26.2"
+anyhow = "1.0.94"
+async-executor = "1.13.1"
+cgroups-rs = "0.3.4"
+clap = { version = "4.5.23", features = ["derive"] }
+env_logger = "0.11.5"
+futures-lite = "2.5.0"
+futures-util = "0.3.31"
+log = "0.4.22"
+netlink-proto = { version = "0.11.3", default-features = false, features = ["smol_socket"] }
+nix = { version = "0.29.0", features = ["sched"] }
 rand = "0.8.5"
-rtnetlink = { version = "0.12.0", default-features = false, features = ["smol_socket"] }
+rtnetlink = { version = "0.14.1", default-features = false, features = ["smol_socket"] }
 unshare = "0.7.0"
